# mcp-server

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  README.MD  install.ps1  install.sh
.github/workflows/: ci_cd.yml  qa.yml
src/: client.rs  main.rs  model.rs  server.rs
