[package]
name = "sda-mcp-server"
version = "0.1.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive", "env"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
rmcp = { version = "0.13.0", features = ["transport-io"] }
tokio = { version = "1.49.0", features = ["full"] }
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.43", features = ["serde"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing = "0.1"
reqwest = { version = "0.13.1", features = ["json", "multipart", "stream", "query"] }
schemars = "1.2.0"
